--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
     },
     "dependencies": {
+        "axios": "^1.6.2",
         "chart.js": "3.3.2",
         "primeflex": "^3.3.1",
         "primeicons": "^6.0.1",
         "primevue": "3.39.0",
         "vue": "^3.2.41",
+        "vue-axios": "^3.5.2",
         "vue-router": "^4.1.5"
     },
     "devDependencies": {
