roles and permissions package added

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "vue-router": "^4.1.5"
     },
     "devDependencies": {
+        "@casl/ability": "^6.5.0",
+        "@casl/vue": "^2.2.1",
         "@rushstack/eslint-patch": "^1.1.4",
         "@vitejs/plugin-vue": "^4.1.0",
         "@vue/eslint-config-prettier": "^7.0.0",
