--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
         "eslint-plugin-vue": "^9.3.0",
         "prettier": "^2.7.1",
         "sass": "^1.55.0",
-        "vite": "^4.2.1"
+        "vite": "^4.2.1",
+        "vuex": "^4.1.0",
+        "vuex-persistedstate": "^4.1.0"
+
     }
 }
